--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": ".\\node_modules\\.bin\\ts-node index.ts"
+    "run": "\"./node_modules/.bin/ts-node\" index.ts"
   },
   "repository": {
     "type": "git",
