--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/celar-team/celar-backend#readme",
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.7.16",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
